--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": "index.js",
   "scripts": {
+    "build": "pkg .",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },  
+  "pkg": {
+    "scripts": "index.js",
+    "targets": [ "node16-macos-arm64" ],
+    "outputPath": "dist"
   },
   "author": "",
   "license": "ISC",
