--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
   "scripts": {
     "build": "pkg .",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },  
+  },
   "pkg": {
     "scripts": "index.js",
-    "targets": [ "node16-macos-arm64" ],
+    "targets": [
+      "node16-macos-arm64"
+    ],
     "outputPath": "dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "args": "^5.0.3",
+    "create-torrent": "^6.0.2",
     "music-metadata": "^8.1.0",
     "network-address": "^1.1.2",
     "pkg": "^5.8.0",
