--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "build": "tsc -p `pwd`/",
     "pkg": "pkg .",
     "test": "npm run testStream",
-    "testSeed":"./dist/wt-pkg -s=`pwd`/README.md",
-    "testCreate":"./dist/wt-pkg -p=`pwd`/README.md",
-    "testStream": "./dist/wt-pkg -m='magnet:?xt=urn:btih:6a9759bffd5c0af65319979fb7832189f4f3c35d&dn=sintel.mp4&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fsintel-1024-surround.mp4'"
+    "testSeed":"./dist/wt-pkg-macos -s=`pwd`/README.md",
+    "testCreate":"./dist/wt-pkg-macos -p=`pwd`/README.md",
+    "testStream": "./dist/wt-pkg-macos -m='magnet:?xt=urn:btih:6a9759bffd5c0af65319979fb7832189f4f3c35d&dn=sintel.mp4&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fsintel-1024-surround.mp4'"
   },
   "pkg": {
     "scripts": "index.js",
     "targets": [
-      "node16-macos-arm64"
+      "linux",
+      "macos",
+      "windows"
     ],
     "outputPath": "dist"
   },
