--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "src/index.js",
   "bin": "src/index.js",
   "scripts": {
-    "start":"npm run build && npm run pkg && npm run test",
+    "start": "npm run fullpipeline",
+    "fullpipeline": "npm run build && npm run pkg && npm run test",
     "build": "tsc -p `pwd`/",
     "pkg": "pkg .",
-    "test": "npm run testStream",
-    "testSeed":"./dist/wt-pkg-macos -s=`pwd`/README.md",
-    "testCreate":"./dist/wt-pkg-macos -p=`pwd`/README.md",
+    "test": "npm run testCreate",
+    "testSeed": "./dist/wt-pkg-macos -s=`pwd`/README.md",
+    "testCreate": "./dist/wt-pkg-macos -d=1 -p=`pwd`/README.md",
     "testStream": "./dist/wt-pkg-macos -m='magnet:?xt=urn:btih:6a9759bffd5c0af65319979fb7832189f4f3c35d&dn=sintel.mp4&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fsintel-1024-surround.mp4'"
   },
   "pkg": {
@@ -26,13 +27,12 @@
   "license": "ISC",
   "dependencies": {
     "args": "^5.0.3",
-    "create-torrent": "^5.0.2",
     "music-metadata": "^8.1.0",
     "network-address": "^1.1.2",
     "webtorrent": "^1.9.6"
   },
   "devDependencies": {
-    "@types/create-torrent": "^5.0.0",
+    "@mapbox/node-pre-gyp": "^1.0.10",
     "@types/node": "^12.7.2",
     "lint-staged": "9.5.0",
     "pkg": "^5.8.0",
