--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "src/index.js",
   "bin": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "npm run fullpipeline",
     "fullpipeline": "npm run build && npm run pkg && npm run test",
     "build": "tsc -p `pwd`/",
     "pkg": "pkg .",
     "test": "npm run create",
+    "testn": "npm run build && node src/index.js -d=1 -p=`pwd`/README.md",
+    "app": "node src/index.js",
     "create": "./dist/wt-pkg-macos -d=1 -p=`pwd`/README.md",
     "stream": "./dist/wt-pkg-macos -m='magnet:?xt=urn:btih:6a9759bffd5c0af65319979fb7832189f4f3c35d&dn=sintel.mp4&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fsintel-1024-surround.mp4'"
   },
   "pkg": {
-    "scripts": "index.js",
+    "scripts":["./package.json"],
+    "assets": ["./package.json"],
     "targets": [
+      "node16",
       "linux",
       "macos",
       "windows"
@@ -28,7 +33,8 @@
     "args": "^5.0.3",
     "music-metadata": "^8.1.0",
     "network-address": "^1.1.2",
-    "webtorrent": "^1.9.6"
+    "webtorrent": "^1.9.6",
+    "webtorrent-hybrid":"https://github.com/konsumer/webtorrent-hybrid"
   },
   "devDependencies": {
     "@mapbox/node-pre-gyp": "^1.0.10",
