--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "module": "node16",
+    "target": "es2022",
     "importHelpers": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
